; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd/sd-bus/extr_test-bus-objects.c_enumerator2_callback.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd/sd-bus/extr_test-bus-objects.c_enumerator2_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"/value/a\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"/value/a/x\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"/value/a/y\00", align 1
@.str.3 = private unnamed_addr constant [11 x i8] c"/value/a/z\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*, i8***, i32*)* @enumerator2_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @enumerator2_callback(i32* %0, i8* %1, i8* %2, i8*** %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8***, align 8
  %10 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8*** %3, i8**** %9, align 8
  store i32* %4, i32** %10, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = call i64 @object_path_startswith(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %5
  %15 = call i8** @strv_new(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0))
  %16 = load i8***, i8**** %9, align 8
  store i8** %15, i8*** %16, align 8
  %17 = call i32 @assert_se(i8** %15)
  br label %18

18:                                               ; preds = %14, %5
  ret i32 1
}

declare dso_local i64 @object_path_startswith(i8*, i8*) #1

declare dso_local i32 @assert_se(i8**) #1

declare dso_local i8** @strv_new(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
